2003-02-11  Trey Matteson  <trey@apple.com>

	Set -seg1addr in our build styles, but not for the B&I build.
	This makes our SYMROOTS from B&I usable to determine symbols from crash
	logs from the field.
	Also nuked DeploymentFat build style.

        Reviewed by Ken.

        * JavaScriptCore.pbproj/project.pbxproj:

2003-02-04  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Darin.

        * JavaScriptCore.pbproj/project.pbxproj: Updated to build the framework
	standalone instead of embedded when doing a B&I build for Panther.

=== Safari-55 ===

2003-01-29  Darin Adler  <darin@apple.com>

        Reviewed by John.

        * kjs/scope_chain.cpp: Rolled out the fix to bug 3137084.
        It caused a massive storage leak, and probably didn't even fix the bug.

2003-01-28  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

	- fixed 3157318 -- hang at time zone page after clicking on map at www.time.gov

        * kjs/date_object.cpp: (KJS::KRFCDate_parseDate): Allow a comma after the day.
        Given how this code is structured, it allows commas in unwanted contexts too, but
        that's almost certainly harmless.

2003-01-28  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3144918 -- Can't drill down multiple levels of categories when selling on ebay
        if first item in list is chosen
        
        The bug was caused by having array values in the property map past the storageLength cutoff
        in an array object; those values would not be seen when you do a get.

        * kjs/array_object.cpp:
        (ArrayInstanceImp::put): Implement a new rule for resizing the storage that is independent
        of the length. The old rule would sometimes make the storage very big if you added two elements
        in a row that both had large, but consecutive indexes. This eliminates any cases where we
        make sparse entries in the property map below the sparse array cutoff.